# cruxim

./: .gitignore  Cargo.toml
shared/: Cargo.toml  uniffi.toml
shared/src/: app.rs  lib.rs  shared.udl
shared/src/matrix/: homeserver.rs  mod.rs
shared/tests/: http.rs
shared_types/: Cargo.toml  build.rs
uniffi-bindgen/: Cargo.toml
uniffi-bindgen/src/: main.rs
