[workspace]
members = ["shared", "shared_types", "uniffi-bindgen"]
resolver = "2"

[workspace.package]
authors = ["m00n"]
edition = "2021"
repository = "https://github.com/m00nwtchr/cruxim/"
license = "MPL-2.0"
keywords = ["crux", "cross-platform-ui", "ffi", "wasm"]

[workspace.dependencies]
anyhow = "1"
serde = "1"
log = "0.4"

crux_core = { path = "../crux/crux_core" }
crux_http = { path = "../crux/crux_http", features = ["http-compat"] }
crux_kv = { path = "../crux/crux_kv" }
uniffi = "0.28"
