[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
once_cell = "1"
uniffi.workspace = true
wasm-bindgen = "0.2"
matrix-sdk = "0.7"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
