[package]
name = "shared_types"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]

[build-dependencies]
crux_core = { workspace = true, features = ["typegen"] }

anyhow.workspace = true
shared = { path = "../shared", features = ["typegen"] }
